# a_foBOT

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  railway.json
.github/workflows/: Deploy.yml  deploy.yml  docker-image.yml  docker_deploy.yml  integration.yml  railway_deploy.yml
src/: config_init.py  main.py  settings.py  settings.py.orig
tests/: unit_test.py
